feat: config minio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=urticaria_data
+# Server
+server.port=8080
+
+# Spring
+spring.application.name=urticaria_collector
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+# Minio
+minio.url=http://202.191.56.11:9010
+minio.access.name=quynhpv
+minio.access.secret=quynhphamvan2001
