feat: uploads a medical record file for a given user and record type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,43 @@
-# Server
+#################################################
+# Server Configuration
+#################################################
 server.port=8080
 
-# Spring
+#################################################
+# Application Settings
+#################################################
 spring.application.name=urticaria_collector
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-# Minio
-minio.url=http://202.191.56.11:9010
+#################################################
+# MinIO Client Configuration
+#################################################
+# MinIO server URL
+minio.internal.endpoint=http://202.191.56.11:9010
+minio.public.endpoint=https://drmayday.ibme.edu.vn/urticaria-data
+# Access key and secret key for MinIO
 minio.access.name=quynhpv
 minio.access.secret=quynhphamvan2001
+
+#################################################
+# Medical Record Storage Service
+#################################################
+# Bucket name for storing medical records
+minio.bucket.name=medical-record
+
+#################################################
+# Global CORS Configuration
+#################################################
+# Allowed origins (use '*' for all)
+cors.allowed-origins=*
+# Allowed HTTP methods
+cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# Allowed request headers
+cors.allowed-headers=*
+# Headers to expose in the response
+cors.exposed-headers=Access-Control-Allow-Origin,Access-Control-Allow-Methods,Access-Control-Allow-Headers
+# Whether credentials (cookies, authorization headers) are allowed
+cors.allow-credentials=true
+# Maximum age (in seconds) for caching preflight response
+cors.max-age=3600
