fix: internal host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.servlet.multipart.max-request-size=100MB
 # MinIO Client Configuration
 #################################################
 # MinIO server URL
-minio.internal.endpoint=http://localhost:9100
+#minio.internal.endpoint=http://202.1.1.56.11:9100
 minio.public.endpoint=https://drmayday.ibme.edu.vn/urticaria-data
 # Access key and secret key for MinIO
 minio.access.name=quynhpv
